Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
Description
The comctl32, coming from Wine, that we currently have in trunk (as of r69754) cannot pretend to be version 6+. It misses a lot of things (like 3-state tree-view checkboxes, and so on...) . I demote its version to the last version of comctl32 available on windows which does not support SxS, aka. 5.82.
See https://msdn.microsoft.com/en-us/library/windows/desktop/hh298349(v=vs.85).aspx and http://www.geoffchappell.com/studies/windows/shell/comctl32/history/ for a list of all available versions.
Attachments
Issue Links
- relates to
-
CORE-10441 Deluge Torrent fails to start
-
- Resolved
-