[PSDK] Fix COMCTL32_VERSION definition.

[COMCTL32]
The comctl32 we currently have in trunk cannot pretend to be version 6+ (it was currently reporting version 6.82, aka something for Windows 20? ) Fix it and make it report 5.82 instead.
CORE-10457

svn path=/trunk/; revision=69755