reactos/dll/win32/comctl32/resource.h
@@ -59,4 +59,7 @@
 #define IDI_TT_WARN_SM                   25
 #define IDI_TT_ERROR_SM                  28
 
-#define COMCTL32_VERSION_MINOR 81
+// This is really ComCtl32 v5.82, the last one not supporting SxS
+#undef  COMCTL32_VERSION // Undefines what the PSDK gave to us
+#define COMCTL32_VERSION        5
+#define COMCTL32_VERSION_MINOR 82
